--- a/src/Pages/Menu/BubbleButtons/Purple/BeginButton/BeginButton.css
+++ b/src/Pages/Menu/BubbleButtons/Purple/BeginButton/BeginButton.css
@@ -18,4 +18,11 @@
     text-decoration: none;
     border-radius: 50%;
     border: none;
+    box-shadow: 20px 20px 50px 0 rgba(0, 0, 0, 0.25);
+
+    animation-name: float;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    --bubble-duration: 6s;
+    animation-duration: var(--bubble-duration);
 }
