--- a/src/Media/Elements/DecoElements/Children/Children.css
+++ b/src/Media/Elements/DecoElements/Children/Children.css
@@ -1,6 +1,6 @@
 
-.children {
-    left: 108px;
-    top: 882px;
-    position: absolute;
-}
+/*.children {*/
+/*    left: 108px;*/
+/*    top: 882px;*/
+/*    position: absolute;*/
+/*}*/
