--- a/src/Pages/Feedback/Feedback.css
+++ b/src/Pages/Feedback/Feedback.css
@@ -124,3 +124,19 @@
     top: 1490px;
     z-index: 1;
 }
+
+.feedback-title-button {
+    width: 245px;
+    height: 245px;
+    position: absolute;
+    left: 46px;
+    top: 618px;
+    background-color: #FEA937;
+    color: #FEF7EE;
+    font-family: 'Caveat Brush', cursive;
+    font-size: 40px;
+    text-align: center;
+    line-height: 40px;
+    border: none;
+    border-radius: 50%;
+}
