--- a/src/Pages/Begin/Begin.css
+++ b/src/Pages/Begin/Begin.css
@@ -29,12 +29,14 @@
     left: 880px;
     top: 381.22px;
     position: absolute;
+    z-index: -1;
 }
 
 .third-point {
     left: 880px;
     top: 1169.22px;
     position: absolute;
+    z-index: -1;
 }
 
 .number1 {
@@ -55,6 +57,7 @@
     font-size: 200px;
     font-weight: 500;
     color: #FEF7EE;
+    z-index: 1;
 }
 
 .number3 {
@@ -114,4 +117,24 @@
     left: 404px;
     top: 1053px;
     position: absolute;
+    box-shadow: 20px 20px 50px 0 rgba(0, 0, 0, 0.25);
 }
+
+.first {
+    animation: slideInFromRight 0.5s forwards ease-in-out;
+}
+
+.second, .third {
+    opacity: 0;
+}
+
+.second {
+    animation: slideInFromLeft 0.5s forwards ease-in-out;
+    animation-delay: 0.4s;
+}
+
+.third {
+    animation: slideInFromRight 0.5s forwards ease-in-out;
+    animation-delay: 0.8s;
+}
+
